# arbeitsblatt-personalisierung

./: .coverage  .gitignore  Einstellungen.command  Ersteinrichtung.command  INSTALLATION.md  README.md  Start.command  Update.command  pyproject.toml  settings.json
Maschinenraum/: .gitignore  CLAUDE.md  pyproject.toml  settings.json
Maschinenraum/docs/: usage.md
Maschinenraum/src/worksheet_personalizer/: __init__.py  __main__.py  batch_processor.py  cli.py  config.py  settings_manager.py
Maschinenraum/src/worksheet_personalizer/core/: __init__.py  image_processor.py  pdf_processor.py  personalizer.py  preview_generator.py
Maschinenraum/src/worksheet_personalizer/fonts/: README.md
Maschinenraum/src/worksheet_personalizer/models/: student.py
Maschinenraum/src/worksheet_personalizer/utils/: __init__.py  interaction_handler.py  settings_menu.py
Maschinenraum/tests/: conftest.py  test_cli.py  test_image_processor.py  test_models.py  test_pdf_processor.py  test_personalizer.py
docs/: examples.md  usage.md
src/worksheet_personalizer/: __init__.py  cli.py  config.py
src/worksheet_personalizer/core/: __init__.py  image_processor.py  pdf_processor.py
src/worksheet_personalizer/models/: __init__.py
src/worksheet_personalizer/utils/: file_handler.py  image_utils.py
tests/: __init__.py  conftest.py  test_file_handler.py  test_image_utils.py  test_personalizer.py
